--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.m-1{margin:1rem}.my-1{margin:1rem 0}.p-1{padding:1rem}.py-1{padding:1rem 0}.m-2{margin:2rem}.my-2{margin:2rem 0}.p-2{padding:2rem}.py-2{padding:2rem 0}.m-3{margin:3rem}.my-3{margin:3rem 0}.p-3{padding:3rem}.py-3{padding:3rem 0}.m-4{margin:4rem}.my-4{margin:4rem 0}.p-4{padding:4rem}.py-4{padding:4rem 0}.m-5{margin:5rem}.my-5{margin:5rem 0}.p-5{padding:5rem}.py-5{padding:5rem 0}.container{max-width:1100px;margin:auto;padding:0 2rem;margin-top:6rem;margin-bottom:3rem}.x-large{font-size:4rem;line-height:1.2rem;margin-bottom:1rem}.large{font-size:3rem;line-height:1.2rem;margin-bottom:1rem}.lead{font-size:1.5rem;margin-bottom:1rem}.text-primary{color:#3e8914}.bg-primary{background-color:#3da35d;color:#e8fccf}.bg-light{background-color:#96e072;color:#134611;border:#ccc 1px solid}.bg-dark{background-color:#134611;color:#e8fccf}.bg-success{background-color:#28a745;color:#e8fccf}.bg-danger{background-color:#dc3545;color:#e8fccf}.bg-white{background-color:#fff;color:#134611;border:#ccc 1px solid}.btn{display:inline-block;background:#96e072;color:#333;padding:.4rem 1.3rem;border:none;cursor:pointer;font-size:1rem;margin-right:.5rem;outline:none;transition:all .3s ease-in}.btn.btn-primary{background-color:#3e8914;color:#e8fccf}.btn.btn-primary:hover{background:#52b61a}.btn.btn-dark{background-color:#134611;color:#e8fccf}.btn.btn-dark:hover{background:#1e6f1b}.btn.btn-success{background-color:#28a745;color:#e8fccf}.btn.btn-success:hover{background:#34ce57}.btn.btn-danger{background-color:#dc3545;color:#e8fccf}.btn.btn-danger:hover{background:#e4606d}.btn:hover{background:#299825;color:#fff}.alert{padding:.8rem;margin:1rem;opacity:.9;background:#96e072;color:#333}.alert.alert-primary{background-color:#3da35d;color:#e8fccf}.alert.alert-dark{background-color:#134611;color:#e8fccf}.alert.alert-success{background-color:#28a745;color:#e8fccf}.alert.alert-danger{background-color:#dc3545;color:#e8fccf}.dark-overlay{height:100%;width:100%;position:absolute;top:0;left:0;background-color:rgba(0,0,0,.6)}.form-group{margin:1.2rem 0}.form input[type=text],.form input[type=email],.form input[type=password],.form select,.form textarea{display:block;width:100%;padding:.4rem;font-size:1.2rem;border:1px solid #ccc}*{box-sizing:border-box;margin:0;padding:0}body{font-family:"Raleway",sans-serif;font-size:1rem;line-height:1.6;background-color:#e8fccf;color:#134611}a{text-decoration:none;color:#3da35d}ul{list-style:none}img{width:100%}.navbar{display:flex;align-items:center;justify-content:space-between;padding:.7rem 2rem;position:fixed;z-index:1;width:100%;top:0;border-bottom:solid 1px #3da35d;opacity:.9}.navbar ul{display:flex}.navbar a{color:#e8fccf;padding:.45;margin:0 .25rem}.navbar a:hover{color:#3da35d}.landing{position:relative;background:url("./img/dog.jpg") no-repeat center center/cover;height:100vh}.landing-inner{color:#e8fccf;height:100%;display:flex;flex-direction:column;width:80%;margin:auto;align-items:center;justify-content:center;text-align:center}
